prevent text wrapping

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,19 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
-html, body {
-  min-width: 400px;
-  width: 100%;
-  height: 100%;
-  @apply fixed inset-0;
+body {
   @apply bg-gray-900 text-white;
-  @apply overflow-auto;
-  font-family: 'Roboto', sans-serif;
-}
-
-#root {
-  @apply overflow-x-hidden;
-  @apply fixed inset-0;
 }
 
 code {
